# advent-of-code

./: README.md  justfile
2019/01/: Cargo.toml
2019/02/: Cargo.toml
2019/03/src/: main.rs
2019/05/: Cargo.toml
2019/05/src/: main.rs
2019/06/: Cargo.toml
2019/06/src/: main.rs
2019/07/: Cargo.toml
2019/07/src/: main.rs
2019/08/: Cargo.toml
2019/08/src/: main.rs
2019/09/: Cargo.toml
2019/09/src/: main.rs
2019/10/: Cargo.toml
2019/11/: Cargo.toml
2019/12/: Cargo.toml
2019/13/: Cargo.toml
2019/14/: Cargo.toml
2019/15/: Cargo.toml
2019/16/: Cargo.toml
2019/17/: Cargo.toml
2019/2/: Cargo.toml  bat
2019/3/: Cargo.toml
2019/4/: Cargo.toml
2019/5/: Cargo.toml
2019/intcode/: Cargo.toml
2019/intcode/src/: executor.rs  instruction.rs  interpreter.rs  lib.rs  main.rs  opcode.rs  utils.rs
2019/intcode/src/debugger/: event.rs  handler.rs  mod.rs  tui.rs  ui.rs
2023/01/: Cargo.toml
2023/02/: Cargo.toml
2023/03/: Cargo.toml
2023/04/: Cargo.toml
2023/05/: Cargo.toml
2023/06/: Cargo.toml
2023/08/: Cargo.toml
2023/10/: Cargo.toml
2023/11/: Cargo.toml
2023/5/: Cargo.toml
2023/8/: Cargo.toml
2024/04/: Cargo.toml
2024/05/: Cargo.toml
2024/06/: Cargo.toml
2024/07/: Cargo.toml
2024/08/: Cargo.toml
2024/09/: Cargo.toml
2024/11/: Cargo.toml
2024/13/: Cargo.toml
2024/15/: Cargo.toml
2024/16/: Cargo.toml
2024/17/: Cargo.toml
2024/18/: Cargo.toml
2024/19/: Cargo.toml
2024/20/: Cargo.toml
2024/21/: Cargo.toml
2024/23/: Cargo.toml
2024/24/: Cargo.toml
2025/02/: Cargo.toml
2025/06/: Cargo.toml
(+65 files in other folders)
